removing nonce regex for allowing Tezos addresses
